crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__func__tests__compile_external_function.snap
---
source: crates/mlir-rs/src/dialect/func.rs
expression: module.as_operation()
---
module {
  func.func private @foo(index) -> index
}
